style: Fix header button styles and alignment

--- a/frontend/src/layout/Header/NavbarItem/NavbarItem.scss
+++ b/frontend/src/layout/Header/NavbarItem/NavbarItem.scss
@@ -19,22 +19,25 @@
 	&.btn {
 		font-size: clamp(12px, 1.2vw, 18px);
 
-		&:hover {
-			box-shadow: none;
+		&__default {
+			position: relative;
+			transition: all 0.3s ease-in-out;
+			border: 2px solid transparent;
+			background-clip: padding-box;
+
+			&:hover {
+				box-shadow: none;
+				color: $background;
+				border: 2px solid rgba($text, 1);
+			}
 		}
 
 		&__reverse {
 			transition: all 0.3s ease-in-out;
-
-			&:hover {
-				background: $secondary;
-				-webkit-text-fill-color: $background;
-				-moz-text-fill-color: $background;
-			}
-		}
-
-		&__default:hover {
-			color: $background;
+			border: none;
+			color: $secondary;
+			-webkit-text-fill-color: $secondary;
+			-moz-text-fill-color: $secondary;
 		}
 	}
 }
